= Recent Changes in HCl

== next version

* addded `config` command to display current credentials

== v0.4.9 2013-12-21

* MacOS X: store password in default keychain
* abort log command when a timer is running

== v0.4.8 2013-11-30

* more fixes for 1.9.3

== v0.4.7 2013-11-30

* added --reauth option to refresh credentials
* added support for retrying on API throttle
* note command without args now displays all notes for a running timer
* fixed a crash on ruby 1.9.3

== v0.4.6 2013-11-21

* automatically request credentials on auth-failure
* fix user-entered credentials

== v0.4.5 2013-11-21

* allow filtering of tasks by project code
* eliminate shoulda from development dependencies

== v0.4.4 2013-11-20

* added completion command to output a Bash auto-complete script, closes #34
* removed jeweler dependency

== v0.4.3 2013-11-19

* added cancel command to delete the last running timer, closes #13
* properly unescape string from Harvest API, closes #24
* stop command now checks for running timers from yesterday, closes #35
* added log command to log time/notes without leaving a timer running, closes #30

== v0.4.2 2013-11-19

* resume command now accepts an optional task

== v0.4.1 2013-11-18

* update dependencies

== v0.4.0 2013-11-18

* start a timer or add a note without having to specify the sub-command
* aliases can be specified with "@" anywhere on the command line
* added alias and unalias to simplify setting task aliases

== v0.3.2 2011-12-30

* fixed support for modern Rubies
* it's now possible to provide a message with the stop command

== v0.3.1 2011-07-13

* use STDERR instead of STDOUT for error reporting
* sort tasks before viewing tasks (brian@madebyrocket.com)
* resume command to resume the most recently active timer (brian@madebyrocket.com)
* show current time when on 'start', 'stop', and 'show' commands (scharfie@gmail.com)
* include client name in tasks list (scharfie@gmail.com)

== v0.3.0 2010-04-02

* added support for free accounts
